Got images to work with database

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -8,6 +8,8 @@
 <h1>Welcome to the Pokedex</h1>
 <ul>
     <li><a href="pokemon">Search</a></li>
+    <br></br>
+    <li><img src = "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-vi/omegaruby-alphasapphire/1.png" width="300" height="200"></li>
 </ul>
 </body>
 </html>
