I've been waiting on this jar file to be created for idk how long and judging by the last 4 attempts it probably wont work anyways. Final commit for p0

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <title>Welcome Page</title>
 </head>
 <body>
-<h1>Welcome to the Pokedex</h1>
 <ul>
-    <li><a href="pokemon">Search</a></li>
-    <br></br>
-    <li><img src = "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-vi/omegaruby-alphasapphire/1.png" width="300" height="200"></li>
+    <h5 class="display-1">Welcome to the Pokedex</h5>
+    <blockquote class="blockquote">
+        <div class="card-body">
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"><a href="pokemon?searchName" class="btn btn-lg">Begin your search</a></button>
+                <button class="btn btn-primary" type="button"><a href="pokemon" class="btn btn-lg">Or view them here</a></button>
+            </div>
+        </div>
+    </blockquote>
 </ul>
 </body>
 </html>
